--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,8 +74,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/
-    - assets/article.pdf
+#    - assets/
+#    - assets/article.pdf
     - images/
 
   #   - images/a_dot_ham.jpeg
